css/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');

* {

    margin: 0;
    padding: 0;
    box-sizing: border-box;
    text-decoration: none;
    border: none;
    outline: none;
    scroll-behavior: smooth;
    /* font-family: sans-serif; SET UP LATER */

}

:root {

    --bg-color: #1f242d;
    --bg-clear: #1f242da5;
    --second-bg-color: rgb(0, 0, 0);
    --text-color: #fff;
    --main-color: #4cc8fd;

}

html {

    font-size: 62.5%;
    overflow-x: hidden;

}

html.sr .load-hidden {

    visibility: hidden;

}

body {

    /* background: var(--bg-color); */
    background-color: black;
    color: var(--text-color);
    font-family: 'Montserrat', sans-serif;

}

section {

    min-height: 100vh;
    padding: 10rem 9% 2rem;

}

.header {

    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    padding: 2rem 9%;
    background-color: var(--bg-clear);
    background-repeat: no-repeat;
    display: flex;
    justify-content: space-between;
    align-items: center;
    z-index: 100;

}

.header.sticky {

    border-bottom: .1rem solid rgba(0, 0, 0, .2);

}

.logo {

    font-size: 2.5rem;
    color: var(--text-color);
    font-weight: 600;
    cursor: default;

}

.navbar a {

    font-size: 1.7rem;
    color: var(--text-color);
    margin-left: 4rem;
    transition: .3s;

}

.navbar a:hover,
.navbar a.active {

    color: var(--main-color);

}

#menu-icon {

    font-size: 3.6rem;
    color: var(--text-color);
    display: none;

}

.home {

    display: flex;
    justify-content: center;
    align-items: center;
    background-color: black;
    background-image: url(../images/blue-workstation.jpg);
    background-size: cover;
    background-position: center;
    background-attachment: fixed;

}


.home-content h3 {

    font-size: 3.2rem;
    font-weight: 700;

}

.home-content h3:nth-of-type(2) {

    margin-bottom: 2rem;

}

span {

    color: var(--main-color)
}

.home-content h1 {

    font-size: 5.6rem;
    font-weight: 700;
    line-height: 1.3;

}

.home-content p {

    font-size: 1.6rem;

}

.social-media a {

    display: inline-flex;
    justify-content: center;
    align-items: center;
    width: 4rem;
    height: 4rem;
    background: transparent;
    border: .2rem solid var(--main-color);
    border-radius: 50%;
    font-size: 2rem;
    color: var(--main-color);
    margin-right: 3rem 1.5rem 3rem 0;
    transition: .5rem ease;
    
}

.social-media a:hover {

    background: var(--main-color);
    color: var(--second-bg-color);
    box-shadow: 0 0 1rem var(--main-color);

}

.about-content a {

    display: inline-flex;
    justify-content: center;
    align-items: center;
    width: 4rem;
    height: 4rem;
    background: transparent;
    border: .2rem solid var(--main-color);
    border-radius: 50%;
    font-size: 2rem;
    color: var(--main-color);
    margin-right: 3rem 1.5rem 3rem 0;
    /* transition: .5rem ease; */

}

.home-content .btn {

    margin-right: 2rem;

}

.btn {

    display: inline-block;
    padding: 1rem 2.8rem;
    background: var(--main-color);
    border-radius: 4rem;
    box-shadow: 0 0 1rem var(--main-color);
    font-size: 1.6rem;
    color: var(--second-bg-color);
    letter-spacing: .1rem;
    font-weight: 600;
    transition: .5rem ease;
}

.btn:hover {

    box-shadow: none;

}

.about {

    display: flex;
    justify-content: center;
    align-items: center;
    gap: 2rem;
    background: var(--second-bg-color);

}

.about-img img {

    width: 35vw;

}

.heading {

    text-align: center;
    font-size: 4.5rem;

}

.about-content h2 {

    text-align: center;
    line-height: 1.2;

}

.about-content h3 {

    font-size: 2.3rem;
    text-align: center;

}

.about-content p {

    font-size: 1.6rem;
    margin: 2rem 0 3rem;
    text-align: center;

}

/* .about-content a {

    margin-left: 5rem;

} */

.about-items {

    display: flex;
    justify-content: space-around;
    align-items: center;
    gap: 1.5rem;
    margin-left: 5rem;
    margin-right: 5rem;

}

.services {
    background-color: var(--bg-color);
}

.services h2 {

    margin-bottom: 5rem;

}

.services-container {

    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    gap: 2rem;

}

.services-container .services-box {

    flex: 1 1 30rem;
    background: var(--second-bg-color);
    padding: 3rem 2rem 4rem;
    border-radius: 2rem;
    text-align: center;
    border: .2rem solid var(--bg-color);
    transition: .5s ease;

}

.services-container .services-box:hover {

    border-color: var(--main-color);
    transform: scale(1.02);
    box-shadow: 0 0 1rem var(--main-color);

}

.services-box i {

    font-size: 7rem;
    color: var(--main-color);

}

.services-box h3 {

    font-size: 2.6rem;
    margin: 2rem 0;

}

.services-box p {

    font-size: 1.6rem;
    margin-bottom: 1rem 0 3rem;

}

.portfolio {

    background: var(--second-bg-color);

}

.portfolio h2 {
    
    margin-bottom: 4rem;

}

.portfolio-container {

    display:grid;
    /* One photo and description aside. Change display to inline/ flex. */
    grid-template-columns: repeat(3, 1fr);
    align-items: center;
    gap: 2.5rem;

}

.portfolio-container .portfolio-box {

    position: relative;
    border-radius: 2rem;
    /* box-shadow: 0 0 1rem var(--main-color); */
    overflow: hidden;
    display: flex;

}

.portfolio-box img {

    width: 100%;
    transition: .5s ease;

}

.portfolio-box img:hover {

    transform: scale(1.1);
}

.portfolio-box .portfolio-layer {

    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: linear-gradient(rgba(0, 0, 0, .1), var(--main-color));
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    text-align: center;
    padding: 0 4rem;
    transform: translateY(100%);
    transition: .5s ease;

}
/* ... */

